Увеличенный перебор гиперпараметров

--- a/README
+++ b/README
@@ -11,3 +11,4 @@
 Случайный лес показал 0.61 по f1-мере и 0.84 по ROC-AUC. Этого получилось добиться благодаря технике upsampling.
 Однако, я перепроверил downsampling и взвешевание классов и получил результат < чем при upsampling'е
 Гиперпараметры подбирались с помощью байесовоской оптимизации.
+Увеличили диапазон перебора отдельных гиперпараметров, min_samples_leaf, min_samples_split, n_estimators, это увеличило ROC-AUC и уменьшило f1-меру. Что логично, так как увеличенный перебор ведет к переобучению модели.
