--- a/project_v2.ipynb
+++ b/project_v2.ipynb
@@ -133,7 +133,7 @@
       },
       "source": [
         "#### Вывод:\n",
-        "Находится в конце работы."
+        "Находится в конце работы. Репозиторий: https://github.com/ledge888/project_unix"
       ]
     },
     {
